# unitedefi

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  HACKATHON_DEMO_STATUS.md  HACKATHON_SUCCESS_FINAL.md  README.md  debug-contract-flow.js  deploy-all-contracts.sh  deploy.sh  deployment-summary.json  env.template  final-demo-test.js  fix-approval-flow.js  fix-resolver-approval.js  package-lock.json  package.json  test-fixed-contracts.js
Samples/solana-fusion-protocol-main/: .prettierignore  Anchor.toml  package.json  tsconfig.json
Samples/solana-fusion-protocol-main/programs/fusion-swap/: Cargo.toml
Samples/solana-fusion-protocol-main/programs/fusion-swap/src/: auction.rs  error.rs  lib.rs
contracts/: .gitignore  debug-resolver.js  hardhat.config.js  manual-auth.js  package-lock.json  package.json  tronbox.js
contracts/deployments/: celo-complete.json  celo.json  etherlink.json  monad.json  sepolia-complete.json  tron.json
contracts/ethereum/: StellarFusionEscrow.sol  deploy-1inch-contracts.js  env.template  hardhat.config.js  package.json
contracts/scripts/: add-resolver.js  check-resolver-auth.js  deploy-tron.js  (+11 more)
frontend/: package-lock.json  package.json
resolver/: .gitignore  check-abi.js  package-lock.json  package.json  test-direct.js
resolver-service/: README.md  env.production  package.json
scripts/: check-resolver-funds.js  debug-allowance.js  debug-escrow-revert.js  debug-escrow.js  debug-revert.js  manual-cross-chain-test.js  quick-test.js  test-cross-chain.js  test-resolver.js
stellar-fusion-extension/: config.production  package.json
(+64 files in other folders)
